external-crates/move/crates/move-compiler/tests/move_2024/matching/invalid_binding_var.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E04036]: non-exhaustive pattern
  ┌─ tests/move_2024/matching/invalid_binding_var.move:8:16
  │
8 │         match (opt) {
  │                ^^^ Pattern 'Option::Some(_)' not covered

error[E02010]: invalid name
  ┌─ tests/move_2024/matching/invalid_binding_var.move:9:26
  │
9 │             Option::Some(Hello) => (),
  │                          ^^^^^ Invalid pattern variable name 'Hello'. Pattern variable names must start with 'a'..'z' or '_'
  │
  = The compiler may have failed to resolve this constant's name
